[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/GUI/screens/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/labels/LabelBig.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/themes/BlueButtonTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/fonts/Font35.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )

[node name="LabelBig" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 126.0
margin_right = 96.0
margin_bottom = -897.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 205.0
margin_top = -266.575
margin_right = 605.0
margin_bottom = 326.425
rect_min_size = Vector2( 162.62, 0 )
rect_scale = Vector2( 1.12, 1.12 )
custom_constants/separation = 34

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 175.0
rect_min_size = Vector2( 400, 175 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Resume"

[node name="QuitMenu" type="Button" parent="VBoxContainer"]
margin_top = 209.0
margin_right = 400.0
margin_bottom = 384.0
rect_min_size = Vector2( 400, 175 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Quit to Menu"

[node name="QuitDesktop" type="Button" parent="VBoxContainer"]
margin_top = 418.0
margin_right = 400.0
margin_bottom = 593.0
rect_min_size = Vector2( 400, 175 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Quit to Desktop"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/fade_in = SubResource( 2 )
anims/start = SubResource( 3 )

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitMenu" to="." method="_on_QuitMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitDesktop" to="." method="_on_QuitDesktop_pressed"]
